# freertos_playground

./: meson.build  stm32f767zi.build
BSP/: Nucleo_F767ZI_GPIO.h  Nucleo_F767ZI_Init.c
Src/: main_taskCreation.c
include/: FreeRTOSConfig.h
include/dis/osal/debug/: assert.hpp  contracts.hpp
include/dis/osal/thread/: mutex.hpp  semaphore.hpp  thread.hpp
include/dis/osal/thread/detail/: semaphore_policy.hpp
include/dis/osal/utils/: cpu.hpp  function_view.hpp
src/: main.cpp  main_mutex.cpp  main_semaphore.cpp
src/utils/: malloc_free.c  new_delete.cpp
